--- a/01_introToReact/index.html
+++ b/01_introToReact/index.html
@@ -26,9 +26,8 @@
 
     <!-- Now, cdn (Content delivery network) links of react and react-dom specially for dom manipulation in browser with efficiency -->
 
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="./App.js"></script>
+    
+    <script type="module" src="./App.js"></script>
 
 </body>
 
