--- a/03_FoodApp/index.htm
+++ b/03_FoodApp/index.htm
@@ -13,9 +13,9 @@
 
 <body  class="m-0 p-0">
     <div id="root">
-        Not Rendered
+        Not Renderedsfm
     </div>
     <script type="module" src="./App.js"></script>
-</body>
+</body> 
 
 </html>
