--- a/03_FoodApp/index.htm
+++ b/03_FoodApp/index.htm
@@ -13,7 +13,7 @@
 
 <body  class="m-0 p-0">
     <div id="root">
-        Not Renderedsfm
+        Not Rendered
     </div>
     <script type="module" src="./App.js"></script>
 </body> 
